# flutter_onnxruntime

./: .clang-format  .gitignore  .metadata  .pubignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pubspec.yaml
.github/workflows/: android_lint.yml  cpp_lint.yml  flutter.yml  integration_test_on_linux.yml  integration_test_on_macos.yml  integration_test_on_web.yml  ios_lint.yml  kotlin_lint.yml  ort_integration_tests.yml  swift_lint.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/masicai/flutter_onnxruntime/: FlutterOnnxruntimePlugin.kt
android/src/main/kotlin/com/masicai/flutteronnxruntime/: FlutterOnnxruntimePlugin.kt
android/src/test/kotlin/com/masicai/flutter_onnxruntime/: FlutterOnnxruntimePluginTest.kt
android/src/test/kotlin/com/masicai/flutteronnxruntime/: FlutterOnnxruntimePluginTest.kt
doc/: api_usage.md  contributing.md  troubleshooting.md
doc/linux/: architecture.md
docs/: api_usage.md  contributing.md  troubleshooting.md
docs/linux/: FLUTTER_LINUX_PLUGINS.md  LINUX_SETUP.md  ONNX_RUNTIME_API.md  architecture.md
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/masicai/flutter_onnxruntime_example/: MainActivity.kt
example/assets/models/: addition_model.ort  string_concat_model.onnx  transpose_and_avg_model_fp16.onnx  transpose_and_avg_model_fp32.onnx  transpose_and_avg_model_int32.onnx
example/integration_test/: all_tests.dart  onnxruntime_integration_test.dart  ort_value_test.dart  plugin_integration_test.dart  transpose_and_avg_model_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/test_driver/: integration_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
hooks/: pre-commit
ios/: .swiftlint.yml  flutter_onnxruntime.podspec
ios/Classes/: FlutterOnnxruntimePlugin.swift
lib/: flutter_onnxruntime.dart
lib/src/: flutter_onnxruntime_method_channel.dart  flutter_onnxruntime_platform_interface.dart  onnxruntime.dart  ort_model_metadata.dart  ort_provider.dart  ort_session.dart  ort_value.dart
lib/web/: flutter_onnxruntime_web_plugin.dart
linux/: CMakeLists.txt  float16_utils.cc  float16_utils.h  flutter_onnxruntime_plugin.cc  flutter_onnxruntime_plugin_private.h  ort_value.cc  ort_value.h
linux/include/flutter_onnxruntime/: export.h  float16_utils.h  flutter_onnxruntime_plugin.h  ort_value.h
linux/src/: flutter_onnxruntime_plugin.cc  session_manager.cc  session_manager.h  tensor_manager.cc  tensor_manager.h  value_conversion.cc  value_conversion.h
linux/test/: flutter_onnxruntime_plugin_test.cc
macos/: flutter_onnxruntime.podspec
macos/Classes/: FlutterOnnxruntimePlugin.swift  _FlutterOnnxruntimePlugin.swift
scripts/: run_tests.sh  run_tests_in_local.sh
test/: flutter_onnxruntime_test.dart  onnxruntime_method_channel_test.dart
test/unit/: flutter_onnxruntime_method_channel_test.dart  flutter_onnxruntime_test.dart  ort_model_metadata_test.dart  ort_session_test.dart  ort_value_session_integration_test.dart  ort_value_test.dart
windows/: CMakeLists.txt  flutter_onnxruntime_plugin.cpp  flutter_onnxruntime_plugin.h
windows/include/flutter_onnxruntime/: export.h  flutter_onnxruntime_plugin.h
windows/src/: pch.h  session_manager.cc  session_manager.h  tensor_manager.cc  tensor_manager.h  value_conversion.cc  value_conversion.h  windows_utils.cc  windows_utils.h
